--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,20 @@
 body{
 	text-align: center;
+	background-color:#e5e5ff;
 }
 .graph{
 	border-color: black;
 	border-style: solid;
 	height:100%;
 	width:100%;
+	
+}
+path{
+	stroke:white;
+	stroke-width:.25px;
+	fill:#006600;
+	opacity:0.1;
+}
+circle{
+	z-index: 2;
 }
